--- a/albums/src/main/resources/application.yaml
+++ b/albums/src/main/resources/application.yaml
@@ -7,3 +7,10 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/appsdeveloperblog
           jwk-set-uri: http://localhost:8080/realms/appsdeveloperblog/protocol/openid-connect/certs
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8010/eureka
+  instance:
+    appname: demo-albums
