--- a/discoveryservice/src/main/resources/application.properties
+++ b/discoveryservice/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8010
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.server.renewal-percent-threshold=0.5
+#eureka.server.enableSelfPreservation=false
 
 logging.level.com.netflix.eureka=off
 logging.level.com.netflix.discovery=off
