--- a/resource_server/src/main/resources/application.yaml
+++ b/resource_server/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
-  port: 8082
+  port: 0
 spring:
+  application:
+    name: demo-resource-server
   security:
     oauth2:
       resourceserver:
@@ -13,3 +15,4 @@ eureka:
       defaultZone: http://localhost:8010/eureka
   instance:
     appname: demo-resource-server
+    instance-id: ${spring.application.name}:${instanceId:${random.value}}
