PKCE auth, cors config

--- a/api_gateway/src/main/resources/application.yaml
+++ b/api_gateway/src/main/resources/application.yaml
@@ -24,6 +24,14 @@ spring:
         predicates[0]: Path=/albums
         predicates[1]: Method=GET
         filters[0]: RemoveRequestHeader=Cookie
+      globalcors:
+        add-to-simple-url-handler-mapping: true
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods: "*"
+            allowedHeaders: "*"
+
 
 eureka:
   client:
